--- a/planer/green/templates/green/plant_list.html
+++ b/planer/green/templates/green/plant_list.html
@@ -13,12 +13,15 @@
 
 
 <section class="u-clearfix u-palette-1-light-2 current-section u-block-78d3-1" custom-posts-hash="[I,T]" data-section-properties="{&quot;margin&quot;:&quot;none&quot;,&quot;stretch&quot;:true}" data-id="78d3" data-posts-content="[{'images':[[519,395]],'maps':[],'videos':[],'icons':[],'textWidth':889,'textHeight':368,'id':1,'headingProp':'h3','textProp':'text'}]" data-style="group-control-new-6" id="carousel_168a" data-source="functional_fix" style="background-image: none">
-  <div class="u-clearfix u-sheet u-valign-middle u-block-78d3-2" style="min-height: 759px">
-    <div class="u-align-left u-container-style u-group u-radius-50 u-shape-round u-white u-block-78d3-4" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500" style="width: 889px; min-height: 387px; background-image: none; box-shadow: 5px 5px 20px 0 rgba(var(--black-r),var(--black-g),var(--black-b),0.4); --animation-custom_in-translate_x: 0px; --animation-custom_in-translate_y: -300px; --animation-custom_in-opacity: 0.5; --animation-custom_in-rotate: 0deg; --animation-custom_in-scale: 1; margin-top: 60px; margin-right: 30px; margin-bottom: 0; margin-left: auto" data-block="56" data-block-type="Group">
-      <div class="u-container-layout u-valign-middle u-block-78d3-5" style="padding-top: 30px; padding-right: 30px; padding-bottom: 30px; padding-left: 370px" data-container-layout-dom="7">
+    <div class="u-clearfix u-sheet u-valign-middle u-block-78d3-2" style="min-height: 759px">
+      <div class="u-align-left u-container-style u-group u-radius-50 u-shape-round u-white u-block-78d3-4" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500" style="width: 889px; min-height: 387px; background-image: none; box-shadow: 5px 5px 20px 0 rgba(var(--black-r),var(--black-g),var(--black-b),0.4); --animation-custom_in-translate_x: 0px; --animation-custom_in-translate_y: -300px; --animation-custom_in-opacity: 0.5; --animation-custom_in-rotate: 0deg; --animation-custom_in-scale: 1; margin-top: 60px; margin-right: 30px; margin-bottom: 0; margin-left: auto" data-block="56" data-block-type="Group">
+       <div class="u-container-layout u-valign-middle u-block-78d3-5" style="padding-top: 30px; padding-right: 30px; padding-bottom: 30px; padding-left: 370px" data-container-layout-dom="7">
         <h2 class="u-text u-text-default u-block-78d3-6" style="margin-top: 0; margin-right: auto; margin-bottom: 0; margin-left: 0; font-family: &quot;Playfair Display&quot;, serif" data-block="57">{{plantL}}</h2>
-        {% for taskL in task_list  %}
+        <p class="u-text u-text-default u-block-78d3-7" style="margin-top: 20px; margin-right: auto; margin-bottom: 0; margin-left: 0" data-block="58">Zadania: </p>
+
+          {% for taskL in task_list  %}
         {% if taskL.task_plant == plantL %}
+
         <ul>
           <p class="u-text u-text-default u-block-78d3-7" style="margin-top: 20px; margin-right: auto; margin-bottom: 0; margin-left: 0" data-block="58">{{ taskL }} - {{ taskL.task_date }} </p>
         </ul>
@@ -37,3 +40,31 @@
     </ul>
 {% endfor %}
 {% endblock %}
+
+
+
+    <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-section-1" id="carousel_f290">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-opacity u-opacity-50 u-palette-4-dark-2 u-shape u-shape-rectangle u-shape-1" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="500" data-animation-direction="Right"></div>
+        <img class="u-image u-image-1" src="{{plantL.plant_photo}}" data-image-width="1080" data-image-height="1080" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="500" data-animation-direction="Left">
+
+        <div class="u-shape u-shape-svg u-text-grey-15 u-shape-2" data-animation-name="rollIn" data-animation-duration="1000" data-animation-direction="" data-animation-delay="750">
+          <svg class="u-svg-link" preserveAspectRatio="none" viewBox="0 0 160 160" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-db78"></use></svg>
+          <svg class="u-svg-content" viewBox="0 0 160 160" x="0px" y="0px" id="svg-db78"><path d="M114.3,152.3l38-38C144.4,130.9,130.9,144.4,114.3,152.3z M117.1,9.1l-108,108c0.8,1.6,1.7,3.2,2.7,4.8l110-110
+	C120.3,10.9,118.7,10,117.1,9.1z M97.5,2L2,97.5c0.4,2,1,4,1.5,5.9l99.9-99.9C101.5,2.9,99.5,2.4,97.5,2z M80,160c2,0,4-0.1,5.9-0.2
+	l73.9-73.9c0.1-2,0.2-3.9,0.2-5.9c0-0.6,0-1.2,0-1.9L78.1,160C78.8,160,79.4,160,80,160z M34.9,146.1c1.5,1,3,2,4.6,2.9L149,39.5
+	c-0.9-1.6-1.9-3.1-2.9-4.6L34.9,146.1z M132.7,19.8L19.8,132.7c1.2,1.3,2.3,2.6,3.6,3.9L136.6,23.4C135.3,22.2,134,21,132.7,19.8z
+	 M59.6,157.4l97.8-97.8c-0.5-1.9-1.1-3.8-1.7-5.7L53.9,155.6C55.8,156.3,57.7,156.9,59.6,157.4z M7.6,45.9L45.9,7.6
+	C29.1,15.5,15.5,29.1,7.6,45.9z M80,0c-2.6,0-5.1,0.1-7.6,0.4l-72,72C0.1,74.9,0,77.4,0,80c0,0.1,0,0.2,0,0.2L80.2,0
+	C80.2,0,80.1,0,80,0z"></path></svg>
+        </div>
+        <div class="u-grey-10 u-preserve-proportions u-shape u-shape-circle u-shape-3" data-animation-name="rollIn" data-animation-duration="1000" data-animation-direction="" data-animation-delay="250"></div>
+        <div class="u-align-left u-container-style u-group u-white u-group-1" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-direction="Down">
+          <div class="u-container-layout u-valign-middle u-container-layout-1">
+            <h2 class="u-text u-text-1">{{ plant_list }}</h2>
+            <p class="u-text u-text-2">{{plant_list}}</p>
+            <a href="{% url 'green:group_pk' group.id %}" class="u-active-grey-15 u-border-2 u-border-active-grey-15 u-border-grey-15 u-border-hover-grey-15 u-btn u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-hover-grey-15 u-none u-text-active-black u-text-black u-text-hover-black u-btn-1">ZOBACZ</a>
+          </div>
+        </div>
+      </div>
+    </section>
