Done do prezentacji 5:13

--- a/planer/green/templates/green/base.html
+++ b/planer/green/templates/green/base.html
@@ -47,7 +47,7 @@
 
 		</div>
 	  </div>
-		<span><a class="nav-item nav-link" href="{% url 'home' %}">Logowanie</a></span>
+		<span><a class="nav-item nav-link" href="{% url 'home' %}"></a></span>
 	</nav>
 </header>
 
